# api_rust

./: .gitignore  .rest  Cargo.toml  README.md  docker-compose.yml  log.txt  package.json
.cargo/: config.toml
crates/db/: Cargo.toml
crates/db/prisma/: schema.prisma
crates/db/src/: lib.rs  post.rs  prisma_client.rs  surreal.rs  user.rs
crates/db/src/prisma_client/: prisma.rs
crates/main/: Cargo.toml
crates/main/src/: logger.rs  main.rs
crates/prisma-cli/: Cargo.toml
crates/routes/: Cargo.toml
crates/routes/src/: auth.rs  error.rs  lib.rs  post.rs  test_utils.rs
crates/routes/src/mw/: jwt.rs  log.rs  mod.rs
crates/routes/src/routes/: auth.rs  mod.rs  post.rs
crates/tests/: Cargo.toml
crates/tests/src/: main.rs
