[package]
name = "api_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
