[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_routes = { path = "../routes" }
api_db = { path = "../db", default-features = true }

tokio = { workspace = true }
anyhow = { worspace = true }
