[package]
name = "api_routes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_db = { path = "../db" }

axum = { workspace = true }
anyhow = { workspace = true }
pretty-sha2 = { version = "0.1" }
serde = { workspace = true }
tokio = { workspace = true }

uuid = { workspace = true }
jsonwebtoken = { version = "8" }
http = { workspace = true }
